--- a/css/main.css
+++ b/css/main.css
@@ -3,13 +3,27 @@
 	src: url('../fonts/wisdom-script.otf') format('opentype');
 }
 
+html {
+	font-size: 16px;
+}
+
 body {
 	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
+	font-size: 1em;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	align-items: center;
 }
 
 .container{
 	max-width: 1200px;
 	margin: 0 auto;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
 }
 
 h1,
@@ -21,33 +35,55 @@ h4 {
 	font-weight: 700;
 }
 h1 {
-	font-size: 30px;
+	font-size: 1.875em;
 }
 h2 {
-    font-size: 24px;
+    font-size: 1.5em;
 }
 h3 {
-	font-size: 18px;
+	font-size: 1.125em;
 }
 h4 {
-	font-size: 12px;
+	font-size: 0.75em;
 }
 
 p {
-	font-size: 14px;
+	font-size: 0.875em;
 	line-height: 21px;
     padding: 0 30px;
 }
 
 /*The widths are in a percentage!*/
 header {
-	height: 110px;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	align-items: center;
+	height: auto;
 	border-bottom: 3px solid #77a466;
 	margin: 0 auto;
+	width: 100%;
+}
+
+.site-name {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+}
+
+.nav-items {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
 }
 
 header h1 {
-	float: left;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	margin: 0;
 	padding: 38px 0;
 }
@@ -55,22 +91,32 @@ header h1 span {
 	color: #77a466;
 }
 
-header nav {
-	float: right;
-	padding: 46px 0;
+nav {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-flow: row wrap;
 }
-header nav ul {
+nav ul {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-flow: row wrap;
+	width: 100%;
 	margin: 0;
 	padding: 0;
 }
-header nav ul li {
+nav ul li {
+	width: 100%;
 	text-transform: uppercase;
 	font-weight: 700;
 	font-size: 14px;
-	padding: 0 10px;
-	display: inline;
+	padding: 20px 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
-header nav ul li a{
+nav ul li a{
 	text-decoration: none;
 	color:#77a466;
 }
@@ -78,6 +124,10 @@ header nav ul li a{
 /*The widths are in a percentage!*/
 .top-section,
 .bottom-section {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	align-items: center;
 	margin: 0 auto;
 	clear: both;
 }
@@ -88,10 +138,12 @@ header nav ul li a{
 }
 .main-image img {
 	width: 100%;
+	border-top: 3px solid #77a466;
 	border-bottom: 3px solid #77a466;
 }
 
 .main-title {
+	width: 96%;
 	height: auto;
 	float: left;
 }
@@ -109,14 +161,13 @@ header nav ul li a{
 .section-one,
 .section-two,
 .section-three {
-	width: 33%;
+	width: 100%;
 	height: auto;
-	float: left;
 	border-top: 1px solid #eee;
 }
 
 .section-one h4 {
-	padding: 10px 0;
+	padding: 10px 30px;
 }
 
 .section-two {
@@ -131,7 +182,7 @@ header nav ul li a{
 
 .menu {
 	list-style: none;
-	padding: 0;
+	padding: 0 30px;
 }
 .menu li {
 	padding: 10px 0;
@@ -151,6 +202,10 @@ header nav ul li a{
 
 /*The widths are in a percentage!*/
 footer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
 	height: 50px;
 	border-top: 3px solid #eee;
 	margin: 0 auto;
